--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">姓名診断</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_my_result">診断結果</string>
 
 </resources>
